--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Lesson 4</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iure vitae eos pariatur nemo est alias adipisci quos vel quam explicabo assumenda architecto, optio molestiae fugit tempore similique beatae mollitia?</p>
     </body>
 </html>
