--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./css/style.css">
         <title>lesson 4</title>
     </head>
     <body>
-        <h1>Lesson 4</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit iure vitae eos pariatur nemo est alias adipisci quos vel quam explicabo assumenda architecto, optio molestiae fugit tempore similique beatae mollitia?</p>
+        <header>
+            <nav>
+                <ul>
+                    <li id="activepage" >
+                        <a href="index.html">home</a>
+                    </li>
+                    <li><a href="index.html">about</a></li>
+                    <li><a href="index.html">contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div>
+            <address class="adresloc"
+            <h3>საკონტაქტო ინფორმაცია</h3>
+
+                <div>
+                    <p class="adres" >  მისამართი</p>
+                    <a href="https://goo.gl/maps/gq1ivnv8Fsj5aXtv7" target="blank" >პეტრიაშვილის ქ.30</a>
+                </div>
+                <div>
+                    <p class="adres" >ტელ</p>
+                    <a href="tel:+99532222222">+995 32 222 222</a>
+                </div>
+                <div>
+                    <p class="adres" >ელ. ფოსტა</p>
+                    <a href="mailto:mail@gmail.com" target="blank" >mail@gmail.com</a>
+                </div>
+            </address>
+        </div>
     </body>
 </html>
